cmake_minimum_required(VERSION 3.20)
project(cpp_primer)

set(CMAKE_CXX_STANDARD 14)

#add_executable(cpp_primer
#        ch1/ch1_9.cpp)
#add_executable(cpp_primer
#        ch1/ch1_10.cpp)
#add_executable(cpp_primer
#        ch1/ch1_11.cpp)
#add_executable(cpp_primer
#        ch1/ch1_16.cpp)
#add_executable(cpp_primer
#        ch1/ch1_17.cpp)
#add_executable(cpp_primer
#        ch1/ch1_20.cpp)
#add_executable(cpp_primer
#        ch1/ch1_21.cpp)
#add_executable(cpp_primer
#        ch1/ch1_22.cpp)
add_executable(cpp_primer
        ch1/ch1_23.cpp)